# a-really-simple-build-tool

./: .gitignore  BUILD.bazel  README.md  WORKSPACE.bazel  bazel  bazel.py  build.yaml  go.mod  go.sum  local.py  main.go  main_test.go  notes.md  package.json  pnpm-lock.yaml  protocol.py  pyproject.toml  remote.go  remote.py  server.py  test_bazel.py  tsconfig.json
decls/: js-yaml.d.ts
examples/txt/: BUILD.bazel  build.yaml
examples/txt/combined/: BUILD.bazel
examples/txt/foo/: BUILD.bazel  who.txt
proto/: BUILD.bazel  acl_pb.d.ts  acl_pb.js  context_pb.d.ts  context_pb.js  remote_execution_grpc_pb.d.ts  remote_execution_grpc_pb.js  remote_execution_pb.d.ts  remote_execution_pb.js  scheduler_grpc_pb.d.ts  scheduler_grpc_pb.js  scheduler_pb.d.ts  scheduler_pb.js  semver_pb.d.ts  semver_pb.js  trace_pb.d.ts  trace_pb.js  user_id_pb.d.ts  user_id_pb.js
src/: Action.js  Action.ts  ConcurrencyLimiter.js  ConcurrencyLimiter.ts  DiGraph.js  DiGraph.ts  SandboxedActionExecutor.js  SandboxedActionExecutor.ts  Target.ts  Task.js  Task.ts  dirs.ts  exec.js  exec.ts  getDirs.js  main.js  main.ts  must.js  must.ts  parse.ts  try.ts
