load("@rules_proto//proto:defs.bzl", "proto_library")
load("@rules_proto_grpc//js:defs.bzl", "js_grpc_node_compile")

proto_library(
    name = "remote_execution_proto",
    srcs = glob(["proto/*.proto"]),
    deps = [
        "@com_google_protobuf//:any_proto",
        "@com_google_protobuf//:duration_proto",
        "@com_google_protobuf//:timestamp_proto",
        "@com_google_protobuf//:wrappers_proto",
        "@googleapis//google/api:annotations_proto",
        "@googleapis//google/longrunning:operations_proto",
        "@googleapis//google/rpc:status_proto",
    ],
)

js_grpc_node_compile(
    name = "remote_execution_js",
    protos = [":remote_execution_proto"],
)
