genrule(
    name = "one",
    srcs = [":who.txt"],
    outs = ["one.txt"],
    cmd = "cat who.txt > $(out)",
)

genrule(
    name="two",
    cmd="sleep 2; echo I am two > $(out)",
    outs=["two.txt"],
)

genrule(
    name="combined",
    cmd="sleep 1; cat one.txt two.txt > $(out)",
    srcs=[":one.txt", ":two.txt"],
    outs=["combined.txt"],
)
